objects/Backify__SVN__c.object
<CustomObject>
    <fields>
        <fullName>Backify__Current_Version__c</fullName>
        <description>Current version of the component.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Current version of the component.</inlineHelpText>
        <label>Current Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backify__Last_Modified_Date__c</fullName>
        <description>Date when it was last modified.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date when it was last modified.</inlineHelpText>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Backify__Last_Modified_by_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who last modified the component.</description>
        <inlineHelpText>User who last modified the component.</inlineHelpText>
        <label>Last Modified by(User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SVNs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backify__Size__c</fullName>
        <description>Size of the current versions code.</description>
        <label>Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backify__Status__c</fullName>
        <description>Status indicating whether the component is active or not.
Active - &gt; backup will be taken on change.
Inactive -&gt; backup will not be taken.</description>
        <inlineHelpText>Status indicating whether the component is active or not.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backify__referenceID__c</fullName>
        <description>ID of the component.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>ID of the component.</inlineHelpText>
        <label>referenceID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SVN</label>
    <listViews>
        <fullName>Backify__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Backify__Apex_Classes</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Backify__Current_Version__c</columns>
        <columns>Backify__Last_Modified_by_User__c</columns>
        <columns>Backify__Last_Modified_Date__c</columns>
        <columns>Backify__referenceID__c</columns>
        <columns>Backify__Size__c</columns>
        <columns>Backify__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>_ApexClass</value>
        </filters>
        <label>Apex Classes</label>
    </listViews>
    <listViews>
        <fullName>Backify__Apex_Pages</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Backify__Current_Version__c</columns>
        <columns>Backify__Last_Modified_by_User__c</columns>
        <columns>Backify__Last_Modified_Date__c</columns>
        <columns>Backify__referenceID__c</columns>
        <columns>Backify__Size__c</columns>
        <columns>Backify__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>_ApexPage</value>
        </filters>
        <label>Apex Pages</label>
    </listViews>
    <listViews>
        <fullName>Backify__Apex_Triggers</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Backify__Current_Version__c</columns>
        <columns>Backify__Last_Modified_by_User__c</columns>
        <columns>Backify__Last_Modified_Date__c</columns>
        <columns>Backify__referenceID__c</columns>
        <columns>Backify__Size__c</columns>
        <columns>Backify__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>_ApexTrigger</value>
        </filters>
        <label>Apex Triggers</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SVNs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>